# cloudkeeper-os-tmp

./: .bandit  .flake8  .gitignore  .gitmodules  .pylintrc  .travis.yml  LICENSE.txt  README.md  pylintrc  pyproject.toml  tasks.py
cloudkeeper_os/: configuration.py  main.py
cloudkeeper_os/grpc/: cloudkeeper_pb2.py  cloudkeeper_pb2_grpc.py  core_connector.py  server.py
tests/: test_cloudkeeper_os.py
