[tool.poetry]
name = "cloudkeeper-os"
version = "2.0.0"
description = "OpenStack backend for Cloudkeeper"
licence = "Apache-2.0"
authors = ["Michal Kimle <kimle.michal@gmail.com>"]
readme = "README.md"
repository = "https://github.com/the-cloudkeeper-project/cloudkeeper-os"

[tool.poetry.dependencies]
python = "^3.6"
"oslo.config" = "^6.5"
"oslo.log" = "^3.40"
setuptools = "^40.8"

[tool.poetry.dev-dependencies]
pytest = "^4.1"
invoke = "^1.0"
flake8 = "^3.6"
flake8-bugbear = "^18.8"
flake8-import-order = "^0.18"
flake8-mypy = "^17.3"
pylint = "^2.2"
pep8-naming = "^0.7"
safety = "^1.8"
bandit = "^1.4"
grpcio-tools = "^1.18"

[tool.poetry.scripts]
cloudkeeper-os = "cloudkeeper_os.main:run"

[tool.poetry.plugins."oslo.config.opts"]
cloudkeeper-os = "cloudkeeper_os.configuration:list_opts"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
